--- a/create.css
+++ b/create.css
@@ -374,7 +374,6 @@ body {
   }
 }
 
-
 .formValidation p {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
@@ -390,8 +389,12 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   border-radius: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
   outline: none;
+}
+.formValidation input:focus,
+.formValidation textarea:focus {
+  border: 1px solid #0066ff;
 }
 
 .formValidation textarea {
@@ -422,6 +425,7 @@ body {
 
 .upload-box:hover {
   background-color: #f3f4f6;
+  border: 1px solid #0066ff;
 }
 
 .plus-icon {
