--- a/update.css
+++ b/update.css
@@ -130,11 +130,58 @@ body {
 .formValidation > textarea:focus {
   background-color: #f9f9f9;
   outline: none;
+  border: 1px solid #7b61ff;
 }
 
 .formValidation > textarea {
   resize: none;
   height: 80px;
+}
+
+.upload-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.upload-box {
+  width: 180px;
+  height: 180px;
+  border: 1px solid #717172;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition: background-color 0.3s ease;
+}
+
+.upload-box:hover {
+  background-color: #f3f4f6;
+  border: 1px solid #0066ff;
+}
+
+.plus-icon {
+  font-size: 48px;
+  color: #898989;
+  transition: opacity 0.3s ease;
+}
+
+.preview-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hidden-file {
+  display: none;
 }
 
 .createBlogBtn {
