add my changes my blog web site

--- a/create.css
+++ b/create.css
@@ -1,47 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 html,
 body {
   max-width: 100%;
   overflow-x: hidden;
-  font-family: sans-serif;
-}
-
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999999999999999999999;
-}
-
-.circle-spinner {
-  width: 60px;
-  height: 60px;
-  border: 6px solid rgba(255, 255, 255, 0.2);
-  border-top: 6px solid #000;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-  margin-top: 20px;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 .autoTypingNavbar {
@@ -56,7 +25,6 @@ body {
 }
 
 .tagline {
-  font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: #ffffff;
   white-space: nowrap;
