--- a/read.css
+++ b/read.css
@@ -1,13 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
   overflow-x: hidden;
   background-color: #ffffff;
-  font-family: sans-serif;
 }
 
 .autoTypingNavbar {
@@ -22,7 +24,6 @@ body {
 }
 
 .tagline {
-  font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: #ffffff;
   white-space: nowrap;
@@ -136,7 +137,7 @@ body {
   position: relative;
   display: inline-block;
 }
-.signOutBtns{
+.signOutBtns {
   cursor: pointer;
 }
 .userAvatar {
@@ -584,7 +585,6 @@ body {
   .blogDelete {
     margin-left: 22px;
   }
-
 
   .noBlogFound {
     position: absolute;
