--- a/signUp.css
+++ b/signUp.css
@@ -390,17 +390,15 @@
   }
 
   .footer {
-    height: 40px;
-  }
-  .footer > span {
+    width: 100%;
     font-size: 12px;
   }
 }
 
 @media (min-width: 500px) and (max-width: 800px) {
   .footer {
-    padding: 10px 0;
-    margin-top: 40px;
+    width: 100%;
+    font-size: 12px;
   }
   .mainDiv {
     flex-direction: column-reverse;
