--- a/profile.css
+++ b/profile.css
@@ -9,7 +9,7 @@
 
 body {
   background: #f0f0f0;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .autoTypingNavbar {
@@ -38,7 +38,7 @@ body {
     width: 0;
   }
   50% {
-    width: 115px;
+    width: 118px;
   }
   100% {
     width: 0;
@@ -65,6 +65,13 @@ body {
   }
 }
 
+.profile-img {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .detailImg {
   width: 250px;
   height: 250px;
@@ -76,18 +83,24 @@ body {
 }
 
 .profile {
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
   width: 40px;
   height: 40px;
+  background: white;
+  border: 2px solid #ccc;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #c5c4c4;
-  position: relative;
-  top: 282px;
-  left: 58%;
-  font-size: 24px;
+  font-size: 18px;
   cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.profile-icon {
+  color: #555;
 }
 
 .detailTitle {
@@ -142,7 +155,6 @@ body {
   cursor: pointer;
   transition: 0.3s;
   box-shadow: 0 12px 30px rgba(174, 173, 173, 0.4);
-  border: 1px solid rgba(0, 0, 0, 0.4);
 }
 
 .updateBtn:hover {
@@ -159,18 +171,20 @@ body {
   .detailTitle {
     font-size: 30px;
   }
+
   .formField input {
-    width: 100%;
     padding: 8px;
   }
+
   .updateBtn {
     padding: 8px;
   }
+
   .profile {
-    position: fixed;
-    top: 202px;
-    left: 66%;
-    font-size: 24px;
-    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    bottom: 22px;
+    right: 25px;
+    font-size: 16px;
   }
 }
