--- a/styles/style.css
+++ b/styles/style.css
@@ -185,6 +185,13 @@ body {
   transform: scale(1.05);
 }
 
+.nav-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background: #000;
+}
+
 .signOutBtn {
   cursor: pointer;
 }
@@ -429,10 +436,17 @@ body {
   border-radius: 50%;
   cursor: pointer;
   background: #00ccff;
+  color: #fff;
   transition: 0.3s;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+.avatar:hover {
+  box-shadow: rgb(101, 193, 255) 0px 2px 8px 0px;
 }
 
 .avatarInfo {
@@ -459,14 +473,19 @@ body {
 .titleCont {
   padding: 0 15px;
   border-bottom: 1px solid #edebeb;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .blogCardTitle {
   font-size: 14px;
   font-weight: 300;
   margin-bottom: 10px;
-  color: #333;
-
+  color: #ff0000;
+  word-break: break-word;
+  white-space: normal;
+  flex: 1 1 100%;
 }
 
 .imageCont {
@@ -478,6 +497,23 @@ body {
   width: 100%;
   height: 552px;
   object-fit: cover;
+}
+
+.likes-shares {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+  padding: 6px 0px;
+
+}
+
+.likes {
+  margin-left: 12px;
+}
+
+.shares {
+  margin-right: 12px;
 }
 
 .blogItemsTag {
@@ -508,7 +544,6 @@ body {
   color: rgb(0, 0, 206);
   font-size: 32px;
 }
-
 
 
 .right-side {
