--- a/styles/home.css
+++ b/styles/home.css
@@ -253,6 +253,7 @@ body {
   background: #ffffff;
   display: flex;
   padding-top: 70px;
+  padding-bottom: 70px;
   justify-content: space-evenly;
   overflow-y: auto;
 }
@@ -316,10 +317,12 @@ body {
   width: 45%;
   min-height: calc(100vh - 48px);
   margin-left: 6%;
+  margin-top: 6%;
+  margin-bottom: 6%;
+  padding-bottom: 100px !important;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding-bottom: 90px;
   flex-wrap: wrap;
 }
 
@@ -330,8 +333,10 @@ body {
   border-radius: 10px;
   overflow: hidden;
   margin: 20px auto;
+  margin-bottom: 30px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 
 .avatarWrapper {
   padding: 10px 15px;
@@ -465,6 +470,7 @@ body {
   width: 100%;
   height: 552px;
   object-fit: cover;
+  background-size: 100% 100%;
 }
 
 .likes-shares {
