add the changes

--- a/styles/update.css
+++ b/styles/update.css
@@ -10,49 +10,7 @@ body {
   overflow-x: hidden;
 }
 
-.navbar {
-  width: 100%;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-}
-
-.blog-heading {
-  font-size: 16px;
-  color: #ffffff;
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 2px solid #fff;
-  width: 0;
-  animation: typing 6s steps(30, end) infinite, blink 0.7s step-end infinite;
-}
-
-@keyframes typing {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 130px;
-  }
-  100% {
-    width: 0;
-  }
-}
-
-@keyframes blink {
-  0%,
-  100% {
-    border-color: transparent;
-  }
-  50% {
-    border-color: #fff;
-  }
-}
-
-.create-blogs {
+.update-blogs {
   width: 100%;
   height: 100vh;
   background: #ffffff;
@@ -61,26 +19,6 @@ body {
   align-items: center;
 }
 
-.blogImg {
-  width: 220px;
-  height: 220px;
-  border-radius: 50%;
-  border: 5px solid #fff;
-  background-image: url("sideBlogs.png");
-  background-size: cover;
-  background-position: center;
-  box-shadow: 0 0 15px rgba(255, 102, 0, 0.927);
-  animation: rotate 12s linear infinite;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
 
 .formValidation {
   width: 100%;
@@ -100,42 +38,73 @@ body {
     opacity: 0;
     transform: translateY(20px);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0);
   }
 }
 
-.formValidation > p {
-  font-size: 18px;
-  letter-spacing: 1px;
-  color: #1a1a1a;
-  font-weight: 800;
-  text-align: center;
+.wrapper-avatar {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 12px;
 }
 
-.formValidation > input,
-.formValidation > textarea {
-  width: 96%;
-  padding: 12px;
-  font-size: 14px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  transition: all 0.3s ease;
-  background: #fff;
+.create-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
 }
 
-.formValidation > input:focus,
-.formValidation > textarea:focus {
-  background-color: #f9f9f9;
+.create-avatar-name {
+  text-decoration: none;
+  color: #000000;
+}
+
+.blog-head {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+.title {
+  border: none;
+  outline: none !important;
+  border-bottom: 1px solid gray;
+  font-size: 16px;
+}
+
+.blog-head>a {
+  position: absolute;
+  top: 6px;
+  right: 12px;
+  font-size: 22px;
+  color: #333;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.blog-head>a:hover {
+  color: #e60023;
+  transform: scale(1.2) rotate(90deg);
+}
+
+.updateTitle {
   outline: none;
-  border: 1px solid #7b61ff;
+  border: none;
+  border-bottom: 1px solid rgb(172, 172, 172);
+  font-size: 16px;
 }
 
-.formValidation > textarea {
-  resize: none;
-  height: 80px;
-}
 
 .upload-container {
   display: flex;
@@ -145,8 +114,8 @@ body {
 }
 
 .upload-box {
-  width: 180px;
-  height: 180px;
+  width: 480px;
+  height: 280px;
   border: 1px solid #717172;
   border-radius: 12px;
   display: flex;
@@ -183,7 +152,7 @@ body {
   display: none;
 }
 
-.createBlogBtn {
+.updateBlogBtn {
   width: 100%;
   height: 42px;
   background: #7b61ff;
@@ -194,73 +163,9 @@ body {
   transition: 0.4s ease;
 }
 
-.createBlogBtn:hover {
+.updateBlogBtn:hover {
   background: #5a44d1;
   cursor: pointer;
   transform: translateY(-2px);
   box-shadow: 0px 5px 15px rgba(123, 97, 255, 0.3);
-}
-
-.footer {
-  width: 100%;
-  text-align: center;
-  padding: 20px 0;
-  margin-top: 40px;
-  background-color: #f5f5f5;
-  color: #444;
-  font-size: 14px;
-  border-top: 1px solid #ddd;
-  position: fixed;
-  bottom: 0px;
-  right: 0px;
-}
-
-.footer a:hover {
-  text-decoration: underline;
-}
-
-@media (max-width: 500px) {
-  .navbar {
-    height: 40px;
-  }
-  .blog-heading {
-    font-size: 14px;
-  }
-  @keyframes typing {
-    0% {
-      width: 0;
-    }
-    50% {
-      width: 120px;
-    }
-    100% {
-      width: 0;
-    }
-  }
-  .blogImg {
-    display: none;
-  }
-  .formValidation {
-    margin-top: 4px;
-  }
-  .formValidation {
-    width: 82%;
-  }
-  .footer {
-    width: 100%;
-    font-size: 12px;
-  }
-}
-
-@media (min-width: 500px) and (max-width: 800px) {
-  .blogImg {
-    display: none;
-  }
-  .formValidation {
-    width: 78%;
-  }
-  .footer {
-    width: 100%;
-    font-size: 12px;
-  }
 }
