--- a/styles/profile.css
+++ b/styles/profile.css
@@ -8,47 +8,29 @@
 }
 
 body {
-  background: #f0f0f0;
-  overflow: hidden;
+  background: #ffffff;
+  overflow-x: hidden;
 }
 
-.autoTypingNavbar {
+.wrapper-user-name {
   width: 100%;
-  height: 45px;
+  height: 52px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
-  padding: 0 20px;
-  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+  background: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.358) 0px 3px 8px;
+  position: fixed;
+  top: 0px;
+  z-index: 999;
 }
 
-.tagline {
-  font-size: 16px;
-  color: #ffffff;
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 2px solid #fff;
-  width: 0;
-  animation: typing 6s steps(30, end) infinite, blink 0.7s step-end infinite;
-}
-
-@keyframes typing {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 118px;
-  }
-  100% {
-    width: 0;
-  }
-}
 
 .blogDetail {
   width: 100%;
-  min-height: 100vh;
-  background: #fff;
+  height: 372px;
+  background: #ffffff;
+  border-bottom: 1px solid #ccc;
   padding: 80px 30px;
   color: #000000;
   display: flex;
@@ -56,7 +38,10 @@ body {
   align-items: center;
   text-align: center;
   animation: fadeIn 1s ease forwards;
+  box-shadow: rgba(0, 0, 0, 0.358) 0px 3px 8px;
   opacity: 0;
+  margin-top: 18px;
+
 }
 
 @keyframes fadeIn {
@@ -77,9 +62,16 @@ body {
   height: 250px;
   object-fit: cover;
   border-radius: 50%;
+  background: #000;
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
   margin-bottom: 30px;
+  font-size: 64px;
   cursor: pointer;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .profile {
@@ -88,7 +80,7 @@ body {
   right: 30px;
   width: 40px;
   height: 40px;
-  background: white;
+  background: rgb(255, 255, 255);
   border: 2px solid #ccc;
   border-radius: 50%;
   display: flex;
@@ -103,88 +95,321 @@ body {
   color: #555;
 }
 
-.detailTitle {
-  font-size: 40px;
-  font-weight: 700;
-  margin-bottom: 30px;
-  animation: slideUp 1.2s ease forwards;
-}
-
-@keyframes slideUp {
-  0% {
-    transform: translateY(50px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.detailDes {
-  max-width: 400px;
+.main-read-blogs {
   width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  gap: 20px;
-  animation: fadeIn 2s ease forwards;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  padding-top: 48px;
+  background: #ffffff;
+
 }
 
-#updateForm {
+.sidebar-wrapper {
+  width: 20%;
+  height: 80%;
+  position: absolute;
+  background-color: #ffffff;
+  border-radius: 8px;
+  margin-right: 70%;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+
+}
+
+.sidebar-avatar {
   display: flex;
-  flex-direction: column;
-  gap: 12px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+
 }
 
-.formField input {
-  width: 100%;
-  padding: 12px;
-  border-radius: 10px;
-  border: none;
-  font-size: 16px;
-  box-shadow: 0 12px 30px rgba(202, 202, 202, 0.4);
+
+.wrapper {
+  width: 80%;
+  border-radius: 8px;
+  padding: 8px 10px;
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  margin-top: 62px;
+  margin-left: 18px;
+  transition: all 0.2s ease-in-out;
+  font-size: 18px;
 }
 
-.updateBtn {
-  padding: 12px;
-  background: #7b61ff;
-  color: #ffffff;
-  border: none;
-  border-radius: 10px;
-  font-weight: bold;
+.wrapper>div>i {
+  font-size: 24px;
+}
+
+.wrapper>a {
+  color: #000;
+  text-decoration: none;
+
+}
+
+.wrapper:hover {
   cursor: pointer;
-  transition: 0.3s;
-  box-shadow: 0 12px 30px rgba(174, 173, 173, 0.4);
+  background: #dedede;
 }
 
-.updateBtn:hover {
-  background: #7053ff;
+.blogs {
+  width: 80%;
+  min-height: calc(100vh - 48px);
+  margin-left: 30%;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding-bottom: 60px;
+}
+
+
+.blogCardDiv {
+  width: 100%;
+  max-width: 500px;
+  background: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 20px auto;
+  margin-bottom: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.avatarWrapper {
+  padding: 10px 15px;
+}
+
+.avatar-container {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip-avatar {
+  visibility: hidden;
+  opacity: 0;
+  background: #222;
   color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 6px 14px;
+  position: absolute;
+  left: 100%;
+  bottom: -22px;
+  transform: translateX(-50%) scale(0.95);
+  white-space: nowrap;
+  font-size: 14px;
+  pointer-events: none;
+  transition: opacity 0.25s, transform 0.25s;
+  z-index: 10;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
 }
 
-@media (max-width: 502px) {
-  .detailImg {
-    width: 200px;
-    height: 200px;
+.avatar-container:hover .tooltip-avatar {
+  visibility: visible;
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
+}
+
+
+.avatarDiv {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: relative;
+}
+
+.avatar {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  cursor: pointer;
+  background: #000000;
+  color: #fff;
+  transition: 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+.avatar:hover {
+  box-shadow: rgb(80, 81, 81) 0px 2px 8px 0px;
+}
+
+.avatarInfo {
+  display: flex;
+  flex-direction: column;
+}
+
+.avatarName {
+  font-weight: bold;
+  font-size: 14px;
+  text-decoration: none;
+  color: #000;
+}
+
+.blogsUploadTime {
+  font-size: 12px;
+  color: rgb(0, 0, 0);
+}
+
+.avatarInfo.blogsUploadTime {
+  display: block;
+}
+
+.titleCont {
+  padding: 0 15px;
+  border-bottom: 1px solid #edebeb;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+
+.blogCardTitle {
+  font-size: 14px;
+  font-weight: 300;
+  margin-bottom: 10px;
+  color: #706f6f;
+  word-break: break-word;
+  white-space: normal;
+  flex: 1 1 100%;
+}
+
+.imageCont {
+  width: 100%;
+  height: auto;
+}
+
+.blogCardImg {
+  width: 100%;
+  height: 552px;
+  object-fit: cover;
+  background-size: 100% 100%;
+}
+
+.likes-shares {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+  padding: 6px 0px;
+
+}
+
+.likes {
+  margin-left: 12px;
+}
+
+.shares {
+  margin-right: 12px;
+}
+
+.blogItemsTag {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 15px;
+  border-top: 1px solid #edebeb;
+}
+
+.likeBtn {
+  cursor: pointer;
+  font-size: 14px;
+  color: #1877f2;
+}
+
+.shareBtn {
+  font-size: 14px;
+  text-decoration: none;
+  color: #1877f2;
+  font-weight: 500;
+}
+
+.noBlogFound {
+  position: absolute;
+  top: 100%;
+  right: 30%;
+  color: rgb(0, 0, 206);
+  font-size: 32px;
+}
+
+.moreDetail {
+  display: inline-block;
+  padding: 12px 20px;
+  margin: 15px 20px;
+  background-color: #3498db;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
+}
+
+.moreDetail:hover {
+  background-color: #2980b9;
+}
+
+
+
+.blogDelete {
+  color: #f00;
+  font-size: 22px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.blogDelete:hover {
+  transform: translateX(5px);
+}
+
+.updateBlog {
+  color: rgb(30, 255, 0);
+  font-size: 22px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.updateBlog:hover {
+  transform: translateX(5px);
+
+}
+
+
+
+#spinner {
+  display: none;
+  width: 80px;
+  height: 80px;
+  border: 8px solid #ffffff;
+  border-top: 8px solid #000000;
+  border-radius: 50%;
+  position: absolute;
+  top: 100%;
+  right: 35%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
 
-  .detailTitle {
-    font-size: 30px;
-  }
-
-  .formField input {
-    padding: 8px;
-  }
-
-  .updateBtn {
-    padding: 8px;
-  }
-
-  .profile {
-    width: 35px;
-    height: 35px;
-    bottom: 22px;
-    right: 25px;
-    font-size: 16px;
+  100% {
+    transform: rotate(360deg);
   }
 }
+
+@media (max-width:992px) {
+  .sidebar-wrapper {
+    display: none;
+  }
+}
+
+
